# aws_chat

./: README.md  pyproject.toml
src/aws_chat/: chat.py
